# deshield

./: .dockerignore  .env.example  Dockerfile  README.md  agent.json  pyproject.toml
docs/: architecture.md  plan.md  video_script.md  writeup.md
src/: config.py  main.py  mcp_server.py  models.py  run_cli.py
src/agents/: ingestion.py  license.py  maintenance.py  orchestrator.py  remediation.py  report.py  secrets.py  synthesizer.py  typosquat.py  vulnerability.py
src/tools/: license_data.py  manifest.py  osv.py  pypi.py  repo.py  secrets_scanner.py  typosquat_logic.py
src/utils/: logging.py
src/web/: app.py  middleware.py  routes.py
src/web/templates/: dashboard.html
tests/: test_license.py  test_manifest.py  test_osv.py  test_remediation.py  test_repo.py  test_secrets.py  test_synthesizer.py  test_typosquat.py
